Mod: add skeleton of classes and configure tests coverage reports